# CAOS_ATALAYA

./: .env.example  .gitignore  ATTRIBUTION.md  CHANGELOG.md  LICENSES.md  README.md  pyproject.toml  requirements-precompute.txt
.github/workflows/: ci.yml  deploy-pages.yml
data/: README.md
data-pipeline/: README.md  requirements.txt
data-pipeline/atalayalab/: __init__.py  config.py  live.py  pipeline.py  registry.py
data-pipeline/scripts/: lexical_baseline_offline.py  pca3d_offline.py  topics_offline.py
data/derived/: catalog.json  categories.json  embeddings.json  graph.json  harvest_report.json  metrics.json
deploy/: atalaya.fasl-work.com.nginx  pages.md
docs/: README.md  architecture.md  cases.md  data-contract.md  frameworks.md  guides.md
docs/architecture/: 01_overview.md  02_determinism-and-trace.md  03_the-gate.md  04_live-lane-pyodide.md  04_live-lane.md  05_precompute-pipeline.md  06_model-evaluation.md  07_deploy.md  08_data-contracts.md
docs/cases/: AFF_top.md  CART_map.md  CAT_overview.md  CORR_findings.md  CORR_network.md  GEO_coverage.md  JOIN_comuna.md  JOIN_region.md  QC_census.md  README.md  SEM_network.md  TIME_coverage.md
frontend/: copy-data.mjs  index.html  package-lock.json  package.json
frontend/src/: main.tsx  (+2 more)
mcp/: README.md  atalaya_mcp.py
scripts/: check_artifacts.py  deploy.ps1  deploy.sh  precompute.ps1  precompute.sh  setup.ps1  setup.sh
tests/: conftest.py  test_affinity.py  test_contract.py  test_embed.py  test_entities.py  test_gate.py  test_graphdb.py  test_manifest.py  test_pipeline_smoke.py  test_stats.py
(+117 files in other folders)
